# slipsole

./: Cargo.toml  Trunk.toml  index.html
assets/: styles.css
src/: main.rs
