[package]
name = "slipsole"
version = "0.0.1"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = [
    "console",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
] }

[profile.release]
strip = true
lto = true
